--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
   <link rel="icon" type="image/svg+xml" href="./src/assets/img/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Maritime Education System & Job Portal</title>
+  <script>
+    window.embeddedChatbotConfig = {
+    chatbotId: "SJyDLYLxA40XI-PcKCiUG",
+    domain: "www.chatbase.co"
+    }
+    </script>
+    <script
+    src="https://www.chatbase.co/embed.min.js"
+    chatbotId="SJyDLYLxA40XI-PcKCiUG"
+    domain="www.chatbase.co"
+    defer>
+    </script>
 </head>
 
 <body>
